--- a/src/views/pages/404/index.html
+++ b/src/views/pages/404/index.html
@@ -13,7 +13,8 @@
   <h1>404</h1>
   <h2>網頁不存在</h2>
   <p>
-    <a href="index.html">Go Home</a>
+    <a href="index.html">返回首頁</a>
+    <h2 style="color:blue;">毛毛的測試檔</h2>
   </p>
 </body>
 </html>
