--- a/src/views/pages/404/index.html
+++ b/src/views/pages/404/index.html
@@ -10,7 +10,7 @@
   <link href="style.scss?inline" rel="stylesheet">
 </head>
 <body>
-  <h1>404</h1>
+  <h1>this page is 404 page</h1>
   <h2>網頁不存在</h2>
   <p>
     <a href="index.html">返回首頁</a>
